tests/ui/range.stderr
error: Range::step_by(0) produces an infinite iterator. Consider using `std::iter::repeat()` instead
  --> $DIR/range.rs:13:5
   |
13 |     (0..1).step_by(0);
   |     ^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/range.rs:11:8
   |
11 | #[deny(range_step_by_zero, range_zip_with_len)]
   |        ^^^^^^^^^^^^^^^^^^

error: Range::step_by(0) produces an infinite iterator. Consider using `std::iter::repeat()` instead
  --> $DIR/range.rs:17:5
   |
17 |     (1..).step_by(0);
   |     ^^^^^^^^^^^^^^^^

error: Range::step_by(0) produces an infinite iterator. Consider using `std::iter::repeat()` instead
  --> $DIR/range.rs:18:5
   |
18 |     (1...2).step_by(0);
   |     ^^^^^^^^^^^^^^^^^^

error: Range::step_by(0) produces an infinite iterator. Consider using `std::iter::repeat()` instead
  --> $DIR/range.rs:21:5
   |
21 |     x.step_by(0);
   |     ^^^^^^^^^^^^

error: It is more idiomatic to use v1.iter().enumerate()
  --> $DIR/range.rs:29:14
   |
29 |     let _x = v1.iter().zip(0..v1.len());
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/range.rs:11:28
   |
11 | #[deny(range_step_by_zero, range_zip_with_len)]
   |                            ^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

